# Sarkari-Portal

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
sarkari_portal/: hooks.py  modules.txt
sarkari_portal/sarkari_portal/doctype/application_details/: application_details.json
sarkari_portal/sarkari_portal/doctype/qr_code/: qr_code.js  qr_code.json  qr_code.py  test_qr_code.py
sarkari_portal/sarkari_portal/web_form/applicant_form/: applicant_form.js  applicant_form.json  applicant_form.py
