[project]
name = "sarkari_portal"
version = "0.0.1"   # ✅ Fixed version (IMPORTANT)
authors = [
{ name = "shalindra", email = "[shalindraaporiya0088@gmail.com](mailto:shalindraaporiya0088@gmail.com)" }
]
description = "this is sarkari_portal"
requires-python = ">=3.10"
readme = "README.md"

dependencies = [
# "frappe~=15.0.0"  # Managed by bench
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# Developer mode dependencies

[tool.bench.dev-dependencies]

# package_name = "~=1.1.0"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = [
"F",
"E",
"W",
"I",
"UP",
"B",
"RUF",
]

ignore = [
"B017",
"B018",
"B023",
"B904",
"E101",
"E402",
"E501",
"E741",
"F401",
"F403",
"F405",
"F722",
"W191",
"UP030",
"UP031",
"UP032",
]

typing-modules = ["frappe.types.DF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true
