[project]
name = "sarkari_portal"
version = "0.0.1"
authors = [
    { name = "shalindra", email = "shalindraaporiya0088@gmail.com" }
]
description = "this is sarkari_portal"
requires-python = ">=3.10"
readme = "README.md"

# Frappe ko dependency me add karna optional hai (bench manage karta hai)
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# 🔥 IMPORTANT: Ye hi tumhara main fix hai
[tool.frappe]
framework = ">=15.0.0,<16.0.0"

# Developer dependencies (optional)
[tool.bench.dev-dependencies]
# example_package = "~=1.1.0"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
    "RUF",
]
ignore = [
    "B017",
    "B018",
    "B023",
    "B904",
    "E101",
    "E402",
    "E501",
    "E741",
    "F401",
    "F403",
    "F405",
    "F722",
    "W191",
    "UP030",
    "UP031",
    "UP032",
]

typing-modules = ["frappe.types.DF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true